# uv-template

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: code.quality.yml  code_quality.yml
tests/: tests.py
